# oop_gtest_lab

./: .gitignore  CMakeLists.txt  README.md
Bubbles/: Bubbles.hpp
Matrix/: Matrix.hpp
Tests/: CMakeLists.txt  Tests.cpp
